bin/tests/errors_parser/parser/parser_err_duplicated_modifier.swg
#global fileprivate

#assert(cast #bit #bit (s32) 9) // swc-expected-error {{parser_err_duplicated_modifier}}
